--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -1,5 +1,5 @@
 # P01 - QIIME 2 Importing and demultiplexing 
-Feb 03th, 2026
+Feb 03rd, 2026
 
 ## Purpose: 
 To import and demultiplex 16S rRNA sequences from microgravity dataset in the shared container in the server using QIIME2
