--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -15,7 +15,7 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 4. Create demux_seqs.qzv for visualization and move to local computer to input in https://view.qiime2.org/ to decide how to trim/truncate reads
 
 ## Code:
-[QIIME2 Code](Scripts/QIIME_2.txt)
+[QIIME2 Code](../Scripts/QIIME_2.txt)
 
 ## Output files and path in the server: 
 1.  /data/microgravity_project/demux_seqs.qza
