--- a/Lab_Notebook/P02.md
+++ b/Lab_Notebook/P02.md
@@ -18,7 +18,7 @@ To detect and correct sequencing errors, trim sequences and to group into respec
 5. Transfer the visualization files to local computer and view the representative sequences and table.qzv using https://view.qiime2.org/
 
 ## Code:
-[QIIME2 Code]
+[QIIME2 Code](../Scripts/QIIME_2.txt)
 
 ## Output files:
 1. /data/microgravity_project/table.qza 
