--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -10,7 +10,7 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 
 ## Procedure:
 1. Connect to  Cisco Secure VPN. Open the terminal and login to MICB 475 class server using the provided shared container login credentials
-2. Create dedicated directory for project 2: /data//data/microgravity_project
+2. Create dedicated directory for project 2: /data/microgravity_project
 3. Import and demultiplex the dataset using paired-end code to create a qza file with demultiplexed sequences
 4. Create demux_seqs.qzv for visualization and move to local computer to input in https://view.qiime2.org/ to decide how to trim/truncate reads
 
@@ -19,7 +19,7 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 
 ## Output files and path in the server: 
 1.  /data/microgravity_project/demux_seqs.qza
-2.  /data/microgravity_project/demux_seqs.qzv
+2.  /data/microgravity_project/demux_seqs.qzv - [demux_seqs.qzv](../Backup_Files/demux_seqs.qzv)
 
 ## Results:
 
