--- a/Lab_Notebook/P02.md
+++ b/Lab_Notebook/P02.md
@@ -22,9 +22,9 @@ To detect and correct sequencing errors, trim sequences and to group into respec
 
 ## Output files:
 1. /data/microgravity_project/table.qza 
-2. /data/microgravity_project/table.qzv - [file]
+2. /data/microgravity_project/table.qzv - [table.qzv](../Backup_Files/table.qzv)
 3. /data/microgravity_project/rep-seqs.qza
-4. /data/microgravity_project/table.qzv - [file]
+4. /data/microgravity_project/rep-seqs.qzv - [rep-seqs.qzv](../Backup_Files/rep-seqs.qzv)
 5. /data/microgravity_project/stats.qza
 
 ## Results: AFTER DENOISING/CLUSTERING:
