--- a/Lab_Notebook/P02.md
+++ b/Lab_Notebook/P02.md
@@ -20,7 +20,7 @@ To detect and correct sequencing errors, trim sequences and to group into respec
 ## Code:
 [QIIME2 Code](../Scripts/QIIME_2.txt)
 
-## Output files:
+## Output files and path in the server:
 1. /data/microgravity_project/table.qza 
 2. /data/microgravity_project/table.qzv - [table.qzv](../Backup_Files/table.qzv)
 3. /data/microgravity_project/rep-seqs.qza
