--- a/Lab_Notebook/P02.md
+++ b/Lab_Notebook/P02.md
@@ -27,7 +27,7 @@ To detect and correct sequencing errors, trim sequences and to group into respec
 4. /data/microgravity_project/rep-seqs.qzv - [rep-seqs.qzv](../Backup_Files/rep-seqs.qzv)
 5. /data/microgravity_project/stats.qza
 
-## Results: AFTER DENOISING/CLUSTERING:
+## Results:
 1. Total number of reads retained:   
 2. Total number of ASVs: 
 3. Total number of samples: 
