--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -22,6 +22,18 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 2.  /data/microgravity_project/demux_seqs.qzv - [demux_seqs.qzv](../Backup_Files/demux_seqs.qzv)
 
 ## Results:
+The same result is generated from samples sequenced from both forward and reverse primers
+1. Total number of reads: 6531021 
+2. Total number of samples: 214
+3. Range of sequencing depth: 7440-114131
+4. Maximum read length (bp): 251
+5. All the reads the same length of 251 bp
+
+Sequence counts
+
+Sequence lengths
+
+Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
 
 ## Discussion:
 
