--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -23,11 +23,11 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 
 ## Results:
 The same result is generated from samples sequenced from both forward and reverse primers
-1. Total number of reads: 6531021 
-2. Total number of samples: 214
-3. Range of sequencing depth: 7440-114131
-4. Maximum read length (bp): 251
-5. All the reads the same length of 251 bp
+1. Total number of reads:  
+2. Total number of samples: 
+3. Range of sequencing depth: 
+4. Maximum read length (bp): 
+5. All the reads the same length of 
 
 Sequence counts
 
