--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -1,25 +1,36 @@
-# P01 - QIIME 2 Importing and demultiplexing 
+# P01 - QIIME 2 Importing, demultiplexing and clustering 
 Feb 03rd, 2026
 
 ## Purpose: 
-To import and demultiplex 16S rRNA sequences from microgravity dataset in the shared container in the server using QIIME2
+To import and demultiplex 16S rRNA sequences from microgravity dataset in the shared container in the server using QIIME2. To use the demux_seqs.qzv to determine if it is necessary to truncate/trim reads and by how much. Create files stasts.qza, table.qza, table.qzv, rep-seqs.qza and rep-seqs.qzv
 
 ## Material:
 1. QIIME2 and shared server
 2. microgravity_manifest.tsv (/datasets/project_2/microgravity/microgravity_manifest.tsv)
+3. DADA2
+4. demux_seqs.qzv
+5. table.qza
+6. rep-seqs.qza
 
 ## Procedure:
 1. Connect to  Cisco Secure VPN. Open the terminal and login to MICB 475 class server using the provided shared container login credentials
 2. Create dedicated directory for project 2: /data/microgravity_project
 3. Import and demultiplex the dataset using paired-end code to create a qza file with demultiplexed sequences
 4. Create demux_seqs.qzv for visualization and move to local computer to input in https://view.qiime2.org/ to decide how to trim/truncate reads
+5. Determine ASVs with DADA2 and truncate/trim reads, creating table.qza, rep-seqs.qza, stats.qz
+6. Create the visualization files table.qzv and rep-seqs.qzv
 
 ## Code:
-[QIIME2 Code](../Scripts/QIIME_2.txt)
+[QIIME2 Code](../Scripts/QIIME2_pt1.txt)
 
 ## Output files and path in the server: 
 1.  /data/microgravity_project/demux_seqs.qza
 2.  /data/microgravity_project/demux_seqs.qzv - [demux_seqs.qzv](../Backup_Files/demux_seqs.qzv)
+3.  /data/microgravity_project/table.qza
+4.  /data/microgravity_project/table.qzv - 
+5.  /data/microgravity_project/rep-seqs.qza
+6.  /data/microgravity_project/rep-seqs.qzv - 
+7.  /data/microgravity_project/stats.qza
 
 ## Results:
 The same result is generated from samples sequenced from both forward and reverse primers
@@ -29,9 +40,11 @@ The same result is generated from samples sequenced from both forward and revers
 4. Maximum read length (bp): 
 5. All the reads the same length of 
 
-Sequence counts
+Reads quality score
+<img src="/Images/Quality_score_rev_reads.png">
 
-Sequence lengths
+
+Sequence length
 
 Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
 
