--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -41,6 +41,7 @@ The same result is generated from samples sequenced from both forward and revers
 5. All the reads the same length of 
 
 Reads quality score
+<img src="/Images/Quality_score_fwd_reads.png">
 <img src="/Images/Quality_score_rev_reads.png">
 
 
