--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -27,28 +27,33 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 1.  /data/microgravity_project/demux_seqs.qza
 2.  /data/microgravity_project/demux_seqs.qzv - [demux_seqs.qzv](../Backup_Files/demux_seqs.qzv)
 3.  /data/microgravity_project/table.qza
-4.  /data/microgravity_project/table.qzv - 
+4.  /data/microgravity_project/table.qzv - [table.qzv](../Backup_Files/table.qzv)
 5.  /data/microgravity_project/rep-seqs.qza
-6.  /data/microgravity_project/rep-seqs.qzv - 
+6.  /data/microgravity_project/rep-seqs.qzv - [drep-seqs.qzv](../Backup_Files/rep-eqs.qzv)
 7.  /data/microgravity_project/stats.qza
 
 ## Results:
+### Before denoising (demux_seqs.qzv)
 The same result is generated from samples sequenced from both forward and reverse primers
-1. Total number of reads:  
-2. Total number of samples: 
-3. Range of sequencing depth: 
-4. Maximum read length (bp): 
-5. All the reads the same length of 
-
+1. Total number of samples: 140
+2. Range of sequencing depth: 61,351 - 191,114
+3. Maximum read length (bp): 151 nts
+4. >99% your samples have 151 nts
 Reads quality score
 <img src="/Images/Quality_score_fwd_reads.png">
 <img src="/Images/Quality_score_rev_reads.png">
 
-
-Sequence length
-
+### After denoising (table.qzv)
+The same result is generated from samples sequenced from both forward and reverse primers
+1. Total number of samples: 140
+2. Range of sequencing depth: 39,956 - 159,209
+   
 Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
 
 ## Discussion:
+1. Both forward and reverse reads were not trimmed at the beginning (left at 0nts), since median quality scores were all above 35. Forward reads were not truncated at the end, since median quality scores were all above 35 (left at 150nts). However, reverse reads were truncated at 140nts due to quality score drop.
+2. Denoising did not remove any samples.
+
 
 ## Future directions:
+The clustered ASVs will be filtered to exclude any mitochondrial or chloroplast sequences, which will remove any eukaryotic data.
