--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -21,7 +21,7 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 6. Create the visualization files table.qzv and rep-seqs.qzv
 
 ## Code:
-[QIIME2 Code](../Scripts/QIIME2_pt1.txt)
+[QIIME2 Code pt.1](../Scripts/QIIME2_pt1.txt)
 
 ## Output files and path in the server: 
 1.  /data/microgravity_project/demux_seqs.qza
