--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -38,7 +38,7 @@ The same result is generated from samples sequenced from both forward and revers
 1. Total number of samples: 140
 2. Range of sequencing depth: 61,351 - 191,114
 3. Maximum read length (bp): 151 nts
-4. >99% your samples have 151 nts
+4. 98% of samples have 151 nts
 Reads quality score
 <img src="/Images/Quality_score_fwd_reads.png">
 <img src="/Images/Quality_score_rev_reads.png">
