--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -29,7 +29,7 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 3.  /data/microgravity_project/table.qza
 4.  /data/microgravity_project/table.qzv - [table.qzv](../Backup_Files/table.qzv)
 5.  /data/microgravity_project/rep-seqs.qza
-6.  /data/microgravity_project/rep-seqs.qzv - [drep-seqs.qzv](../Backup_Files/rep-eqs.qzv)
+6.  /data/microgravity_project/rep-seqs.qzv - [rep-seqs.qzv](../Backup_Files/rep-eqs.qzv)
 7.  /data/microgravity_project/stats.qza
 
 ## Results:
