--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -19,6 +19,9 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 4. Create demux_seqs.qzv for visualization and move to local computer to input in https://view.qiime2.org/ to decide how to trim/truncate reads
 5. Determine ASVs with DADA2 and truncate/trim reads, creating table.qza, rep-seqs.qza, stats.qz
 6. Create the visualization files table.qzv and rep-seqs.qzv
+7. Denoise and cluster the demultiplexed sequences using DADA2
+8. Convert qza files to qzv
+9. Transfer the visualization files to local computer and view the representative sequences and table.qzv using https://view.qiime2.org/
 
 ## Code:
 [QIIME2 Code pt.1](../Scripts/QIIME2_pt1.txt)
