--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -17,7 +17,7 @@ To import and demultiplex 16S rRNA sequences from microgravity dataset in the sh
 2. Create dedicated directory for project 2: /data/microgravity_project
 3. Import and demultiplex the dataset using paired-end code to create a qza file with demultiplexed sequences
 4. Create demux_seqs.qzv for visualization and move to local computer to input in https://view.qiime2.org/ to decide how to trim/truncate reads
-5. Determine ASVs with DADA2 and truncate/trim reads, creating table.qza, rep-seqs.qza, stats.qz
+5. Determine ASVs with DADA2 and truncate/trim reads, creating table.qza, rep-seqs.qza, stats.qza
 6. Create the visualization files table.qzv and rep-seqs.qzv
 7. Denoise and cluster the demultiplexed sequences using DADA2
 8. Convert qza files to qzv
