--- a/Lab_Notebook/P01.md
+++ b/Lab_Notebook/P01.md
@@ -2,7 +2,9 @@
 Feb 03rd, 2026
 
 ## Purpose: 
-To import and demultiplex 16S rRNA sequences from microgravity dataset in the shared container in the server using QIIME2. To use the demux_seqs.qzv to determine if it is necessary to truncate/trim reads and by how much. Create files stasts.qza, table.qza, table.qzv, rep-seqs.qza and rep-seqs.qzv
+To import and demultiplex 16S rRNA sequences from microgravity dataset in the shared container in the server using QIIME2. 
+To use the demux_seqs.qzv to determine if it is necessary to truncate/trim reads and by how much. 
+To create files stasts.qza, table.qza, table.qzv, rep-seqs.qza and rep-seqs.qzv
 
 ## Material:
 1. QIIME2 and shared server
