--- a/Lab_Notebook/P02.md
+++ b/Lab_Notebook/P02.md
@@ -1,49 +1,70 @@
-# P02 - QIIME 2 Denoising and Clustering Sequences into ASVs
+# P02 - QIIME 2 Taxonomic Analysis, Taxonomy-based filtering
 
 Feb 04th, 2026
 
 ## Purpose:
-To detect and correct sequencing errors, trim sequences and to group into respective ASVs
+To determine the taxonomic groups to which the ASVs correspond to, and to generate a taxonomy bar plot that illustrates the relative frequency of each taxonomic group. 
+To perform taxonomy-based filtering and remove any mitochondria or chloroplast sequences.
+To generate an alpha-rarefaction curve. 
+To calculate alpha- and beta-diversity metrics with chosen rarefaction
+
 
 ## Material: 
 1. QIIME2
 2. QIIME2 visualizer
-3. demux_seqs.qza (/data/microgravity_project/demux_seqs.qza)
-4. microgravity_manifest.tsv (/datasets/project_2/microgravity/microgravity_manifest.tsv)
+3. silva-138-99-515-806-nb-classifier.qza (/datasets/classifiers)
+4. table.qza (/data/microgravity_project/table.qza)
+5. rep-seqs.qza (/data/microgravity_project/rep-seqs.qza)
+6. table-no-mitochondria-no-chloroplast.qza (/data/microgravity_project/table-no-mitochondria-no-chloroplast.qza)
+7. microgravity_manifest.tsv (/datasets/project_2/microgravity/microgravity_manifest.tsv)
 
 ## Procedure:
-1. Connect to Cisco Secure VPN. Open the terminal and login to MICB 475 class server using the provided shared container login credentials
-2. Denoise and cluster the demultiplexed sequences using DADA2
-4. Convert qza files to qzv
-5. Transfer the visualization files to local computer and view the representative sequences and table.qzv using https://view.qiime2.org/
+1. Connect to Cisco Anyconnect Secure VPN. Open the terminal and login to MICB 475 class server using the provided login credentials. 
+4. Align the database using the classifier.
+4. Visualize the taxonomy by converting qza files to qzv.
+7. Perform taxonomic-based filtering to remove these sequences and generate a new table.
+8. Summarize the table without mitochondria and chloroplast.
+9. Visualize the table without mitochondria and chloroplast by converting qza file to qzv.
+10. Transfer the table without mitochondria and chloroplast to local computer and view the table using view.QIIME2.org.
+11. View the table to see maximum frequency in order to determine max depth for the alpha-rarefaction.
+12. Generate alpha-rarefaction curve with a max depth of 159,000.
+13. Transfer the alpha-rarefaction file to local computer and view the alpha-rarefaction curve using view.QIIME2.org.
+14. Calculate alpha- and beta-diversity metrics with chosen rarefaction of 64,411
 
 ## Code:
-[QIIME2 Code](../Scripts/QIIME_2.txt)
+[QIIME2 Code pt.2](../Scripts/QIIME2_pt2.txt)
 
 ## Output files and path in the server:
-1. /data/microgravity_project/table.qza 
-2. /data/microgravity_project/table.qzv - [table.qzv](../Backup_Files/table.qzv)
-3. /data/microgravity_project/rep-seqs.qza
-4. /data/microgravity_project/rep-seqs.qzv - [rep-seqs.qzv](../Backup_Files/rep-seqs.qzv)
-5. /data/microgravity_project/stats.qza
+1. /data/microgravity_project/taxonomy.qza 
+2. /data/microgravity_project/taxonomy.qzv - [taxonomy.qzv](../Backup_Files/taxonomy.qzv)
+3. /data/microgravity_project/taxa-bar-plots.qza
+4. /data/microgravity_project/taxa-bar-plots.qzv - [taxa-bar-plot.qzv](../Backup_Files/taxa-bar-plot.qzv)
+5. /data/microgravity_project/table-no-mitochondria-no-chloroplast.qza
+6. /data/microgravity_project/table-no-mitochondria-no-chloroplast.qzv - [table-no-mitochondria-no-chloroplast.qzv](../Backup_Files/table-no-mitochondria-no-chloroplast.qzv)
+7. /data/microgravity_project/alpha-rarefaction.qza
+8. /data/microgravity_project/alpha-rarefaction.qzv- [alpha-rarefaction.qzv](../Backup_Files/alpha-rarefaction.qzv)
+9. /data/microgravity_project/core-metrics-results/
 
 ## Results:
-1. Total number of reads retained:   
-2. Total number of ASVs: 
-3. Total number of samples: 
-4. Range of sequencing depth: 
+1. Choosing rarefaction depth at 64,411 keep most features (64.32%) and samples (92.14%) and discards 11 samples from 140.
 
-Table summary and frequency per sample 
+<img src="Images/Metadata_filt_by_euth_loc.png">
 
+<img src="Images/Metadata_filt_by_condition.png">
 
-Sequence length statistics
+<img src="Images/Metadata_filt_by_hostID.png">
 
+<img src="Images/Metadata_filt_by_time.png">
+
+2. Rarefaction curve with the selected rarefaction depth indicated by the black vertical line
+
+<img src="/Images/Rarefaction_curve.png">
 
 Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
 
 ## Discussion:
-
+Taxonomic-based filtering was applied to remove the mitochondria and chloroplast sequences and thus taxons from the table. A rarefaction depth that keeps as most samples and features as possible was chosen and 11 samples are discarded. An alpha rarefaction curve is generated with the filtered table
 
 
 ## Future direction:
- 
+ Processing data on RStudio
